--- a/homepage.html
+++ b/homepage.html
@@ -12,6 +12,16 @@
       <a href="intro.html"><img class="bioloine fade-in" src="bioline.png" alt="bioline"></a>
     </div>
     <div class="header-right">
+      <a href="match.html" style="text-decoration: none; color: rgb(255, 250, 240);">
+        <button class="battle-btn">
+  <span>
+    <span class="container">
+      <span class="primary"></span>
+      <span class="complimentary"></span>
+    </span>
+  </span>
+  <span>Incepe Batalia</span>
+</button></a>
       <div class="user-icon" id="user-icon">
         <a href="dashboard.html"><img src="user.png" alt="user"></a>
       </div>
@@ -155,7 +165,9 @@
         </section>
     </div>
 
+<section class="informatii">
 
+</section>
 
   
 <section class="page4 fade-in">
