--- a/schelettrunchi.html
+++ b/schelettrunchi.html
@@ -71,148 +71,218 @@
 
     </div>
 
-    <div class="titlucutie">
-        <h1>Scheletul Trunchiului</h1>
-    </div>
-    <section class="a1">
-    <h3>*Scheletul Trunchiului este format din:</h3>
-    <p class="p1">-coloana vertebrala</br>
-        -stern</br>
-        -coaste</br>
-        -bazin</p>
-        <div class="cutiepz1">
-        <img class="poza1" src="tr1.png" alt="poza1">
-    </div>
-</section>
+    <div class="main-content">
+        <div class="page-title">
+            <h1>Sistemul Osos - Scheletul Trunchiului</h1>
+        </div>
 
-    <section class="a2">
-        <div class="cutiepz2">
-        <img class="poza2" src="tr2.png" alt="poza2">
-    </div>
-        <h3>*Bazinul este alcatuit din:</h3>
-      <p class="p2">-osul sacru</br>
-        -cele doua oase coxale</p> 
-        
-</section>
-<div class="titlucutie2">
-    <h1>Coloana Vertebrala</h1>
-</div>
-<section class="a3">
-    <h4>*Reprezinta scheletul axial, fiind situata în<br>
-        partea mediana si posterioara a corpului.<br>
-        *Îndeplineste un triplu rol:<br>
-        -ax de sustinere a corpului<br>
-        -protejarea maduvei spinarii<br>
-        -executarea diferitelor miscari ale trunchiului si capului.</br></h4>
-       <div class="p3"> <p>*Cuprinde 5 regiuni:<br>
-        -cervicala</br>
-        -toracala (dorsala)</br>
-        -lombara</br>
-        -sacrala</br>
-        -coccigiana</br></p>
-    </div>
-   <div class="colon"> <div class="cutiepz3"><img class="poza3" src="tr3.png" alt="poza3"> </div>
-        <div class="p4">
-        <p>Vertebra tip prezinta, în partea sa anterioara,corpul vertebral,
-        iar posterior, arcul vertebral, care este legat de<br> 
-        corpul vertebral prin doi pediculi vertebrali.<br> 
-        Acestia din urma, prin suprapunere, delimiteaza<br>
-        orificiile intervertebrale (de conjugare) prin care<br>
-        ies nervii spinali.<br>
-        Între corpul vertebral, pediculii vertebrali si arcul<br>
-        vertebral se afla orificiul vertebral,<br>
-        care, prin suprapunere, formeaza canalul<br>
-        vertebral ce adaposteste maduva.</br>
-        </p></div>
-       </div>
-       <div class="cutiepz4">
-        <img class="poza4" src="tr4.png" alt="poza4">
-    </div>
-    </section>
-    <div class="titlucutie3">
-        <h1>Coccigele</h1>
-    </div>
-    <section class="a4">
-<div class="p5">
-    <p>Rezulta din fuzionarea celor 4-5 vertebre coccigiene.
-    </p>
-</div>
-<div class="cutiepz5">
-    <img class="poza5" src="tr5.png" alt="poza5">
-</div>
-    </section>
-    <div class="titlucutie4">
-        <h1>Scheletul Toracelui</h1>
-    </div>
-    <section class="a5">
-        <div class="p6">
-            <p>Toracele osos este format anterior de stern,
-                posterior, de la coloana vertebrala,
-                iar lateral, de coaste.
-            </p>
-        </div>
-        <div class="cutiepz6">
-            <img class="poza6" src="tr6.png" alt="poza6">
-        </div>
-            </section>
-            <div class="cutiepz7">
-                <img class="poza7" src="coaste_1.png" alt="poza7">
+        <!-- Section 1: Scheletul Trunchiului -->
+        <div class="section">
+            <div class="section-title">
+                <h2>Scheletul Trunchiului</h2>
             </div>
-            <div class="titlucutie5">
-                <h1>Sternul</h1>
+            <div class="section-content">
+                <div class="flex-container">
+                    <div class="flex-text">
+                        <h3>Componentele Scheletului Trunchiului:</h3>
+                        <ul class="feature-list">
+                            <li>Coloana vertebrală</li>
+                            <li>Stern</li>
+                            <li>Coaste</li>
+                            <li>Bazin</li>
+                        </ul>
+                        <p>Scheletul trunchiului reprezintă partea centrală a sistemului osos, suportând majoritatea organelor și conectând membrele superioare și inferioare.</p>
+                    </div>
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="tr1.png" alt="Scheletul Trunchiului">
+                            <div class="image-caption">Structura scheletului trunchiului</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-container">
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="tr2.png" alt="Bazinul">
+                            <div class="image-caption">Structura bazinului</div>
+                        </div>
+                    </div>
+                    <div class="flex-text">
+                        <h3>Structura Bazinului:</h3>
+                        <ul class="feature-list">
+                            <li>Osul sacru</li>
+                            <li>Cele două oase coxale</li>
+                        </ul>
+                        <p>Bazinul asigură conexiunea dintre trunchi și membrele inferioare, oferind suport și protecție organelor interne din regiunea abdominală inferioară.</p>
+                    </div>
+                </div>
             </div>
-            <section class="a6">
-                <div class="p7">
-                    <p>*Sternul este un os lat, situat anterior,<br>
-                        pe linia mediana a toracelui.<br>
-                        *Este format din:<br>
-                        -manubriu<br>
-                        -corp<br>
-                        -apendicele xifoid,<br> 
-                        care ramâne cartilaginos<br>
-                         pâna în jurul vârstei de 40 de ani.</br>
-                    </p>
+        </div>
+
+        <!-- Section 2: Coloana Vertebrala -->
+        <div class="section">
+            <div class="section-title">
+                <h2>Coloana Vertebrală</h2>
+            </div>
+            <div class="section-content">
+                <div class="highlight-box">
+                    <h4>Role importante:</h4>
+                    <p>Reprezintă scheletul axial, fiind situată în partea mediană și posterioară a corpului. Îndeplinește un triplu rol: ax de susținere a corpului, protejarea măduvei spinării și executarea diferitelor mișcări ale trunchiului și capului.</p>
                 </div>
-                <div class="cutiepz8">
-                    <img class="poza8" src="coaste_2.png" alt="poza8">
+
+                <div class="flex-container">
+                    <div class="flex-text">
+                        <h3>Regiunile coloanei vertebrale:</h3>
+                        <ul class="feature-list">
+                            <li>Cervicală</li>
+                            <li>Toracală (dorsală)</li>
+                            <li>Lombară</li>
+                            <li>Sacrală</li>
+                            <li>Coccigiană</li>
+                        </ul>
+                    </div>
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="tr3.png" alt="Coloana Vertebrală">
+                            <div class="image-caption">Structura coloanei vertebrale</div>
+                        </div>
+                    </div>
                 </div>
-                    </section>
-                    <div class="titlucutie6">
-                        <h1>Coastele</h1>
+
+                <div class="flex-container">
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="tr4.png" alt="Vertebra tip">
+                            <div class="image-caption">Anatomia unei vertebre tip</div>
+                        </div>
                     </div>
-                    <section class="a7">
-                        <div class="p8">
-                            <p>Coastele sunt arcuri osteocartilaginoase,<br>
-                                situate în partea laterala a toracelui,<br>
-                                întinse de la coloana vertebrala toracala pâna la stern.<br>
-                                Sunt în numar de 12 perechi, fiind formate posterior<br>
-                                dintr-un arc osos care se articuleaza cu vertebrele toracale, 
-                                iar anterior, din cartilajul costal.</br>
-                            </p>
-                        </div>
-                        <div class="p9">
-                            <p>Primele 7 perechi sunt coaste adevarate, cartilajul lor<br>
-                                articulându-se cu sternul. Perechile VIII, IX, X sunt<br>
-                                coaste false, deoarece se articuleaza cu sternul prin<br> 
-                                intermediul cartilajului coastei VII. Ultimele doua<br>
-                                coaste nu au cartilaj si nu ajung la stern; se numesc<br>
-                                coaste flotante (libere). Posterior, scheletul toracelui<br>
-                                este format de catre cele 12 vertebre toracale.</br>
-                            </p>
-                        </div>
-                            </section>
-                        <div class="cutiepz9">
-                                <img class="poza9" src="coaste_3.png" alt="poza9">
-                        </div>
-                        <div class="cutiepz10">
-                            <img class="poza10" src="coaste_4.png" alt="poza10">
+                    <div class="flex-text">
+                        <h3>Structura vertebrei tip:</h3>
+                        <p>Vertebra tip prezintă, în partea sa anterioară, corpul vertebral, iar posterior, arcul vertebral, care este legat de corpul vertebral prin doi pediculi vertebrali.</p>
+                        <p>Aceștia din urmă, prin suprapunere, delimitează orificiile intervertebrale (de conjugare) prin care ies nervii spinali.</p>
+                        <p>Între corpul vertebral, pediculii vertebrali și arcul vertebral se află orificiul vertebral, care, prin suprapunere, formează canalul vertebral ce adăpostește măduva.</p>
                     </div>
-                    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-                    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-                    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-                    <script src="firebase-config.js"></script>
-                    <script src="lectii.js"></script>
+                </div>
+            </div>
+        </div>
+
+        <!-- Section 3: Coccigele -->
+        <div class="section">
+            <div class="section-title">
+                <h2>Coccigele</h2>
+            </div>
+            <div class="section-content">
+                <div class="flex-container">
+                    <div class="flex-text">
+                        <h3>Structura și formarea coccigelui:</h3>
+                        <p>Rezultă din fuzionarea celor 4-5 vertebre coccigiene, reprezentând partea terminală a coloanei vertebrale.</p>
+                    </div>
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="tr5.png" alt="Coccigele">
+                            <div class="image-caption">Structura coccigelui</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Section 4: Scheletul Toracelui -->
+        <div class="section">
+            <div class="section-title">
+                <h2>Scheletul Toracelui</h2>
+            </div>
+            <div class="section-content">
+                <div class="flex-container">
+                    <div class="flex-text">
+                        <h3>Componente principale:</h3>
+                        <p>Toracele osos este format anterior de stern, posterior de coloana vertebrală, iar lateral de coaste.</p>
+                        <p>Această structură protejează organe vitale precum inima și plămânii, oferind în același timp flexibilitate pentru procesul respirator.</p>
+                    </div>
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="coaste_1.png" alt="Scheletul Toracelui">
+                            <div class="image-caption">Structura toracelui osos</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Section 5: Sternul -->
+        <div class="section">
+            <div class="section-title">
+                <h2>Sternul</h2>
+            </div>
+            <div class="section-content">
+                <div class="flex-container">
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="coaste_2.png" alt="Sternul">
+                            <div class="image-caption">Structura sternului</div>
+                        </div>
+                    </div>
+                    <div class="flex-text">
+                        <h3>Caracteristici ale sternului:</h3>
+                        <p>Sternul este un os lat, situat anterior, pe linia mediană a toracelui.</p>
+                        <p>Este format din:</p>
+                        <ul class="feature-list">
+                            <li>Manubriu</li>
+                            <li>Corp</li>
+                            <li>Apendicele xifoid, care rămâne cartilaginos până în jurul vârstei de 40 de ani</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Section 6: Coastele -->
+        <div class="section">
+            <div class="section-title">
+                <h2>Coastele</h2>
+            </div>
+            <div class="section-content">
+                <div class="flex-container">
+                    <div class="flex-text">
+                        <h3>Structură și caracteristici:</h3>
+                        <p>Coastele sunt arcuri osteocartilaginoase, situate în partea laterală a toracelui, întinse de la coloana vertebrală toracală până la stern.</p>
+                        <p>Sunt în număr de 12 perechi, fiind formate posterior dintr-un arc osos care se articulează cu vertebrele toracale, iar anterior, din cartilajul costal.</p>
+                    </div>
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="coaste_3.png" alt="Coastele">
+                            <div class="image-caption">Structura coastelor</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-container">
+                    <div class="flex-image">
+                        <div class="image-container">
+                            <img src="coaste_4.png" alt="Tipuri de coaste">
+                            <div class="image-caption">Tipuri de coaste</div>
+                        </div>
+                    </div>
+                    <div class="flex-text">
+                        <h3>Tipuri de coaste:</h3>
+                        <ul class="feature-list">
+                            <li><strong>Coaste adevărate</strong> (perechile I-VII) - cartilajul lor se articulează direct cu sternul</li>
+                            <li><strong>Coaste false</strong> (perechile VIII-X) - se articulează cu sternul prin intermediul cartilajului coastei VII</li>
+                            <li><strong>Coaste flotante/libere</strong> (perechile XI-XII) - nu au cartilaj și nu ajung la stern</li>
+                        </ul>
+                        <p>Posterior, scheletul toracelui este format de către cele 12 vertebre toracale.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
-</body>
-</html>
