--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
       <span class="complimentary"></span>
     </span>
   </span>
-  <span>Incepe Batalia</span>
+  <span>Incepe Competitia</span>
 </button></a>
       <div class="user-icon" id="user-icon">
         <a href="dashboard.html"><img src="user.png" alt="user"></a>
